[package]
name = "mineskin-cli"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
reqwest = { version = "0.12.9", features = ["multipart", "stream", "json"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
colored = "2.1.0"
clap = { version = "4.5.21", features = ["derive"] }


[lints.clippy]
complexity = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
